Fixed more layout issues

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -3,18 +3,18 @@
 */
 
 .container {
-  width: $container-width;
+  width: 95vw;
   margin-left: auto;
   margin-right: auto;
 }
 .container a {
   text-decoration: underline;
 }
-.content-wrapper {
-  padding-top: $header-thickness+12em;
+.content-wrapper {  
+  padding-top: 5vw;
   margin: auto;
   display: block;
-  width: $container-width - 20px;
+  width: 95vw;
 }
 .content-wrapper h1 {
   margin: 20px 0px 5px;
@@ -32,19 +32,19 @@
 //     width: 95vw;
 //   }
 // }
-// @media (max-width: $phone-width) {
-//   .container {
-//     width: 95vw;
-//     margin-left: auto;
-//     margin-right: auto;
-//   }
-//   .content-wrapper {
-//     padding-top: 17em;
-//     margin: auto;
-//     display: block;
-//     width: 95vw;
-//   }
-// }
+@media (max-width: $phone-width) {
+  .container {
+    width: 95vw;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .content-wrapper {
+    padding-top: 30vw;
+    margin: auto;
+    display: block;
+    width: 95vw;
+  }
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 580px) {
@@ -54,7 +54,7 @@
     margin-right: auto;
   }
   .content-wrapper {
-    padding-top: 10em;
+    padding-top: 30vw;
     margin: auto;
     display: block;
     width: 95vw;
@@ -69,7 +69,7 @@
     margin-right: auto;
   }
   .content-wrapper {
-    padding-top: 11em;
+    padding-top: 30vw;
     margin: auto;
     display: block;
     width: 95vw;
@@ -77,14 +77,14 @@
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 680px) {
+@media only screen and (min-width: 768px) {
   .container {
     width: 95vw;
     margin-left: auto;
     margin-right: auto;
   }
   .content-wrapper {
-    padding-top: 13em;
+    padding-top: 25vw;
     margin: auto;
     display: block;
     width: 95vw;
@@ -92,14 +92,9 @@
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 870px) {
-  .container {
-    width: 95vw;
-    margin-left: auto;
-    margin-right: auto;
-  }
+@media (min-width: 992px) {
   .content-wrapper {
-    padding-top: 15em;
+    padding-top: 23vw;
     margin: auto;
     display: block;
     width: 95vw;
@@ -114,7 +109,7 @@
     margin-right: auto;
   }
   .content-wrapper {
-    padding-top: 17em;
+    padding-top: 22vw;
     margin: auto;
     display: block;
     width: 95vw;
