--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -48,7 +48,9 @@
 }
 .menu-list {
   line-height: $header-thickness;
-  float: right;
+  // float: right;
+  width: 60vw;
+  margin: auto;
 }
 .menu-link {
   padding: 5px 10px;
